2001-05-25  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* README.UPGRADING:
	    Semi-forgotten note about the results of 2001-05-15's
	    libta/dianostic.c + scheduler/update.c + smtp TA/scheduler
	    interaction protocol detail.  You can have NEWER scheduler,
	    than smtp-ta, because this is backwards channel detail.

	* lib/cfgets.c:
	    Darryl Miles <darryl@netbauds.net>  found strange looking
	    problem with certain kind of "malformed" input for scheduler
	    configuration file.  Turns out that when this function
	    encounters EOF, and it isn't at the beginning of the line,
	    the line buffer never gets zero-terminated causing possibly
	    strange side-effects when thus revealed previous content of
	    the buffer may reappear.

	    Additional coding to always zero-terminate the allocated buffer.
	    The code is being used both as classical  fgets(),  but also
	    by returning exact number of characters collected.

	    I am doubtfull that the previous state was in any way capable
	    to produce system security threat.

2001-05-22  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/cf/fqdnaliases.cf, proto/cf/process.cf,
	  proto/cf/aliases.cf:
	    Some experiments on doing message-wide 'didexpand' analysis
	    to see if complicated duplicate recipient removal code works.

2001-05-21  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* smtpserver/smtpetrn.c:
	    Tell to the remote scheduler [source.ip.address]@mynodename
	    when issueing ETRN thru MQ2 mechanism.
	    Helps to hunt down cases where lots of ETRN requests are
	    appearing into the scheduler for domains that we don't serve,
	    and/or other such strange things...

	* configure.in, libc/gai_strerror.c:
	    Problems at compling "replacement-ipv6-libc" with RH 7.1 libc.

2001-05-16  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* ssl/Makefile.in, ssl/ssl.c, ssl/ssl:sst.[ch], ssl/ssl_sst.[ch]: